Widgets page updated

--- a/widgets.html
+++ b/widgets.html
@@ -143,6 +143,12 @@
                 margin-left: auto !important;
                 margin-right: auto !important;
             }
+            .widget-title-charts {
+                max-width: 780px;
+                margin-bottom: 16px;
+                margin-left: auto !important;
+                margin-right: auto !important;
+            }
             @media screen and (min-width:768px){
                 .wide-stripe-layer {
                     display: block;
@@ -293,7 +299,7 @@
                                 <div class="hidden-xs col-sm-2"></div>
                                 <div class="col-xs-12 col-sm-8">
                                     <div class="block">
-                                        <div class="row widget-title" style="margin-bottom: 16px;">
+                                        <div class="row widget-title-charts">
                                             <div class="col-xs-8 text-white">
                                                 <h3>Token Activity Chart</h3>
                                             </div>
@@ -344,7 +350,7 @@ eWgs.push(function () {
                                 <div class="hidden-xs col-sm-2"></div>
                                 <div class="col-xs-12 col-sm-8">
                                     <div class="block">
-                                        <div class="row widget-title" style="margin-bottom: 16px;">
+                                        <div class="row widget-title-charts">
                                             <div class="col-xs-8 text-white">
                                                 <h3>Customized Tokens Activity Chart</h3>
                                             </div>
@@ -404,7 +410,7 @@ eWgs.push(function () {
                                 <div class="hidden-xs col-sm-2"></div>
                                 <div class="col-xs-12 col-sm-8">
                                     <div class="block">
-                                        <div class="row widget-title" style="margin-bottom: 16px;">
+                                        <div class="row widget-title-charts">
                                             <div class="col-xs-8 text-white">
                                                 <h3>Dark Theme Chart</h3>
                                             </div>
