Overflow css mistype fixed

--- a/widgets.html
+++ b/widgets.html
@@ -27,7 +27,7 @@
                 /* background: url(/images/bg.jpg) top left no-repeat black; */
                 background: linear-gradient(to top, #000, #152e47);
                 font-family: 'Open Sans', sans-serif;
-                overflow-y: hidden;
+                overflow-x: hidden;
             }
             .topdiv {
                 position: relative; 
