Stripe width updated

--- a/widgets.html
+++ b/widgets.html
@@ -27,7 +27,6 @@
                 /* background: url(/images/bg.jpg) top left no-repeat black; */
                 background: linear-gradient(to top, #000, #152e47);
                 font-family: 'Open Sans', sans-serif;
-                overflow-x: hidden;
             }
             .topdiv {
                 position: relative; 
@@ -133,10 +132,9 @@
             }
             .wide-stripe-layer {
                 position: absolute;
-                width: 100vw;
+                width: 100%;
                 min-height: 200px;
                 background: white;
-                left: -17px;
                 display: none;
             }
             .widget-title {
