--- a/widgets.html
+++ b/widgets.html
@@ -135,6 +135,7 @@
                 width: 100%;
                 min-height: 200px;
                 background: white;
+                left:0px;
                 display: none;
             }
             .widget-title {
