--- a/widgets.html
+++ b/widgets.html
@@ -96,6 +96,7 @@
             }
             .block h3 {
                 padding: 0px;
+                line-height: 32px;
             }
             .ui-dialog-titlebar-close {
                 float: right;
@@ -340,19 +341,20 @@ eWgs.push(function () {
                         </div>
 
                         <div class="content-page space-bottom" style="display:block">
-                            <div class="row widget-title-charts">
-                                <div class="col-xs-8 text-white">
-                                    <h3>Customized Tokens Activity Chart</h3>
-                                </div>
-                                <div class="col-xs-4 text-right">
-                                    <div id="ethplorer-textarea-2-popup">
-                                        <div id="ethplorer-textarea-2" class="widget-code"></div>
+                            <div class="block">
+                                <div class="row widget-title-charts">
+                                    <div class="col-xs-8 text-white">
+                                        <h3>Customized Tokens Activity Chart</h3>
+                                    </div>
+                                    <div class="col-xs-4 text-right">
+                                        <div id="ethplorer-textarea-2-popup">
+                                            <div id="ethplorer-textarea-2" class="widget-code"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
 
-                            <div class="row widget-title">
-                                <div class="bg-gray">
+                                <div class="row widget-title">
+                                    <div class="bg-gray">
 <div id="token-history-grouped-2" data-textarea="ethplorer-textarea-2"></div>
 <script type="text/javascript" data-textarea="ethplorer-textarea-2">
     if (typeof (eWgs) === 'undefined') {
@@ -385,23 +387,25 @@ eWgs.push(function () {
         );
     });
 </script>
+                                    </div>
                                 </div>
                             </div>
                         </div>
 
                         <div class="content-page space-bottom" style="display:block">
-                            <div class="row widget-title-charts">
-                                <div class="col-xs-8 text-white">
-                                    <h3>Dark Theme Chart</h3>
-                                </div>
-                                <div class="col-xs-4 text-right">
-                                    <div id="ethplorer-textarea-3-popup">
-                                        <div id="ethplorer-textarea-3" class="widget-code"></div>
+                            <div class="block">
+                                <div class="row widget-title-charts">
+                                    <div class="col-xs-8 text-white">
+                                        <h3>Dark Theme Chart</h3>
+                                    </div>
+                                    <div class="col-xs-4 text-right">
+                                        <div id="ethplorer-textarea-3-popup">
+                                            <div id="ethplorer-textarea-3" class="widget-code"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row widget-title">
-                                <div class="bg-dark">
+                                <div class="row widget-title">
+                                    <div class="bg-dark">
 <div id="token-history-grouped-3" data-textarea="ethplorer-textarea-3"></div>
 <script type="text/javascript" data-textarea="ethplorer-textarea-3">
     if (typeof (eWgs) === 'undefined') {
@@ -429,7 +433,7 @@ eWgs.push(function () {
         );
     });
 </script>
-
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -441,18 +445,18 @@ eWgs.push(function () {
                         </div>
 
                         <div class="content-page space-bottom" style="display:block">
-                            <div class="row widget-title">
-                                <div class="col-xs-8 text-white">
-                                    <h3>Recent Token Activity</h3>
-                                </div>
-                                <div class="col-xs-4 text-right">
-                                    <div id="ethplorer-textarea-10-popup">
-                                        <div id="ethplorer-textarea-10" class="widget-code"></div>
+                            <div class="block">
+                                <div class="row widget-title">
+                                    <div class="col-xs-8 text-white">
+                                        <h3>Recent Token Activity</h3>
+                                    </div>
+                                    <div class="col-xs-4 text-right">
+                                        <div id="ethplorer-textarea-10-popup">
+                                            <div id="ethplorer-textarea-10" class="widget-code"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="" style="padding-top: 20px;">
+                                <div class="row" style="padding-top: 20px;">
 <div id="token-txs-10" data-textarea="ethplorer-textarea-10"></div>
 <script type="text/javascript" data-textarea="ethplorer-textarea-10">
     if (typeof (eWgs) === 'undefined') {
@@ -471,24 +475,23 @@ eWgs.push(function () {
         );
     });
 </script>
-
                                 </div>
                             </div>
                         </div>
 
                         <div class="content-page space-bottom" style="display:block">
-                            <div class="row widget-title">
-                                <div class="col-xs-8 text-white">
-                                    <h3>Customized Token Activity Widget</h3>
-                                </div>
-                                <div class="col-xs-4 text-right">
-                                    <div id="ethplorer-textarea-11-popup">
-                                        <div id="ethplorer-textarea-11" class="widget-code"></div>
+                            <div class="block">
+                                <div class="row widget-title">
+                                    <div class="col-xs-8 text-white">
+                                        <h3>Customized Token Activity Widget</h3>
+                                    </div>
+                                    <div class="col-xs-4 text-right">
+                                        <div id="ethplorer-textarea-11-popup">
+                                            <div id="ethplorer-textarea-11" class="widget-code"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="" style="padding-top: 20px;">
+                                <div class="row" style="padding-top: 20px;">
 <style data-textarea="ethplorer-textarea-11">
     #token-txs-11 {
         line-height: 1.8;
@@ -545,18 +548,18 @@ eWgs.push(function () {
                         </div>
 
                         <div class="content-page space-bottom" style="display:block">
-                            <div class="row widget-title">
-                                <div class="col-xs-8 text-white">
-                                    <h3>Top Tokens by Activity</h3>
-                                </div>
-                                <div class="col-xs-4 text-right">
-                                    <div id="ethplorer-textarea-12-popup">
-                                        <div id="ethplorer-textarea-12" class="widget-code"></div>
+                            <div class="block">
+                                <div class="row widget-title">
+                                    <div class="col-xs-8 text-white">
+                                        <h3>Top Tokens by Activity</h3>
+                                    </div>
+                                    <div class="col-xs-4 text-right">
+                                        <div id="ethplorer-textarea-12-popup">
+                                            <div id="ethplorer-textarea-12" class="widget-code"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="row">
-                                <div class="" style="padding-top: 20px;">
+                                <div class="row" style="padding-top: 20px;">
 <div id="token-txs-12" data-textarea="ethplorer-textarea-12"></div>
 <script type="text/javascript" data-textarea="ethplorer-textarea-12">
     if (typeof (eWgs) === 'undefined') {
