--- a/widgets.html
+++ b/widgets.html
@@ -24,8 +24,9 @@
 
         <style type="text/css">
             body {
-                /* background: url(/images/bg.jpg) top left no-repeat black; */
-                background: linear-gradient(to top, #000, #152e47);
+                background: url(/images/bg.jpg) top left repeat-x black;
+                background-size: 100%;
+                /* background: linear-gradient(to top, #000, #152e47); */
                 font-family: 'Open Sans', sans-serif;
             }
             .topdiv {
