--- a/widgets.html
+++ b/widgets.html
@@ -594,16 +594,6 @@ eWgs.push(function () {
             </div>
             <div id="disqus_thread" class="container"></div>
             <script>
-
-                /**
-                 *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
-                 *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables */
-                /*
-                 var disqus_config = function () {
-                 this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-                 this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
-                 };
-                 */
                 (function () { // DON'T EDIT BELOW THIS LINE
                     var d = document, s = d.createElement('script');
                     s.src = '//https-ethplorer-io.disqus.com/embed.js';
@@ -611,7 +601,6 @@ eWgs.push(function () {
                     (d.head || d.body).appendChild(s);
                 })();
             </script>
-            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
             <div class="footer">
                 <div class="container">
                     <div class="row">
@@ -627,7 +616,6 @@ eWgs.push(function () {
                         <div class="col-xs-6 col-sm-3">
                             <div class="footer-links" style="color: #ffffff;">
                                 <ul>
-                                    <li><span style="font-weight: 600;"><a href="/about">About</a> </span></li>
                                     <li><a href="/widgets" style="" rel=""><strong>Widgets</strong></a></li>
                                     <li><span style="font-weight: 600;"><a href="/about#disqus_thread">Discuss ethplorer</a></span></li>
                                     <li><span style="font-weight: 600;"><a href="https://github.com/EverexIO/Ethplorer">Sources</a></span></li>
@@ -651,53 +639,24 @@ eWgs.push(function () {
             $(document).ready(function () {
                 EthplorerSearch.init($('#search-form'), $('#search'), Ethplorer.search);
             });
-            if (false && Ethplorer.Config.ga) {
-                (function (i, s, o, g, r, a, m) {
-                    i['GoogleAnalyticsObject'] = r;i[r] = i[r] || function () {
-                        (i[r].q = i[r].q || []).push(arguments)
-                    }, i[r].l = 1 * new Date();
-                    a = s.createElement(o),
-                        m = s.getElementsByTagName(o)[0];
-                    a.async = 1;
-                    a.src = g;
-                    m.parentNode.insertBefore(a, m)
-                })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
+            if(Ethplorer.Config.ga){
+                (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
                 ga('create', Ethplorer.Config.ga, 'auto');
                 ga('send', 'pageview');
             }
+            if(Ethplorer.Config.fb){
+                !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+                n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+                n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+                t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+                document,'script','https://connect.facebook.net/en_US/fbevents.js');
+                fbq('init', Ethplorer.Config.fb);
+                fbq('track', 'PageView');
+            }
         </script>
-        <!-- Facebook Pixel Code -->
-        <script>
-            /*
-            !function (f, b, e, v, n, t, s) {
-                if (f.fbq)
-                    return;
-                n = f.fbq = function () {
-                    n.callMethod ?
-                        n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-                };
-                if (!f._fbq)
-                    f._fbq = n;
-                n.push = n;
-                n.loaded = !0;
-                n.version = '2.0';
-                n.queue = [];
-                t = b.createElement(e);
-                t.async = !0;
-                t.src = v;
-                s = b.getElementsByTagName(e)[0];
-                s.parentNode.insertBefore(t, s)
-            }(window,
-                document, 'script', 'https://connect.facebook.net/en_US/fbevents.js');
-            fbq('init', '1629579527306661');
-            fbq('track', 'PageView');
-            */
-        </script>
-        <noscript><img height="1" width="1" style="display:none"
-                       src="https://www.facebook.com/tr?id=1629579527306661&ev=PageView&noscript=1"
-                       /></noscript>
-        <!-- DO NOT MODIFY -->
-        <!-- End Facebook Pixel Code -->
     </body>
 </html>
