Config script link added

--- a/widgets.html
+++ b/widgets.html
@@ -21,7 +21,7 @@
         <script src="/js/ethplorer.js?v=102"></script>
         <script src="/js/ethplorer-search.js?v=102"></script>
         <script src="/js/ace.js"></script>
-
+        <script src="/js/config.js"></script>
         <style type="text/css">
             body {
                 background: url(/images/bg.jpg) top left repeat-x black;
