--- a/widgets.html
+++ b/widgets.html
@@ -620,6 +620,7 @@ eWgs.push(function () {
                                 <li><a href="https://github.com/EverexIO/Ethplorer">Sources</a></li>
                                 <li><a href="https://github.com/EverexIO/Ethplorer/wiki/Ethplorer-API">API</a></li>
                                 <li><a href="https://github.com/EverexIO/Ethplorer/issues">Github Issue</a></li>
+                                <li><a href="https://twitter.com/ethplorer">Twitter</a></li>
                             </ul>
                         </div>
                         <div class="col-xs-5 col-sm-2 col-md-3 footer-links">
