--- a/widgets.html
+++ b/widgets.html
@@ -20,6 +20,7 @@
         <script src="/js/bignumber.js"></script>
         <script src="/js/ethplorer.js?v=102"></script>
         <script src="/js/ethplorer-search.js?v=102"></script>
+        <script src="/js/ethplorer-note.js?v=102"></script>
         <script src="/js/ace.js"></script>
         <script src="/js/config.js"></script>
         <style type="text/css">
@@ -252,6 +253,7 @@
                     </div>
                 </div>
             </nav>
+            <div id="ethplorer-note"></div>
             <div class="container">
                 <div class="starter-template">
                     <div id="page-create" class="page">
@@ -643,6 +645,7 @@ eWgs.push(function () {
         <script>
             $(document).ready(function () {
                 EthplorerSearch.init($('#search-form'), $('#search'), Ethplorer.search);
+                EthplorerNote.init($('#ethplorer-note'));
             });
             if(Ethplorer.Config.ga){
                 (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
